Hiding the jumbotron and big badges on mobile shop page. Also fixed the newsletter sign up button css on this page (woocommerce css conflict).

--- a/themes/the-dream-bed/css/custom.css
+++ b/themes/the-dream-bed/css/custom.css
@@ -365,17 +365,28 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
 	-moz-border-radius: 0;
 	border-radius: 0;
 }
- .newsletter-email::-webkit-input-placeholder {
- color: #808284;
+
+.newsletter-email::-webkit-input-placeholder {
+	color: #808284;
 }
- .newsletter-email:-moz-placeholder {
- color: #808284;
+
+.newsletter-email:-moz-placeholder {
+	color: #808284;
 }
- .newsletter-email::-moz-placeholder {
- color: #808284;
+
+.newsletter-email::-moz-placeholder {
+	color: #808284;
 }
  .newsletter-email:-ms-input-placeholder {
- color: #808284;
+	color: #808284;
+}
+
+.woocommerce .footer input.button {
+	color: #fff;
+	padding: 6px 12px;
+	font-size: 14px;
+	line-height: 20px;
+	border: 1px solid #FD9D2E;
 }
 
 .page-header {
